Next release
============

Bug Fixes
---------

- Backport from master: The ``pryamid.view.view_config`` decorator did not
  accept a ``match_params`` predicate argument.  See
  https://github.com/Pylons/pyramid/pull/308

- Backport fixes from master regarding URL decoding.  URL segments are
  no-longer "double-decoded" during traversal and when encountered in a route
  subpath (or other star-arg pattern).  As a result, a new API named
  ``pyramid.traversal.traversal_path_info`` was added to the system.  This
  function accepts an already-URL-decoded string and returns a tuple of
  Unicode objects.  This API is used internally by Pyramid in all places that
  ``pyramid.traversal.traversal_path`` used to be used.  The
  ``traversal_path`` function remains for backwards compatibility, however,
  and can still be used when a path is encoded.  See
  https://github.com/Pylons/pyramid/issues/349 for more information.

- Backport fix from master: ``request.static_url`` now generates URL-quoted
  URLs when fed a ``path`` argument which contains characters that are
  unsuitable for URLs.  See https://github.com/Pylons/pyramid/issues/349 for
  more information.

- Backport from master: fix ``request.json_body`` to deal with alternate
  request charsets.

- Backport from master: the AuthTktCookieHelper could potentially generate
  Unicode headers inappropriately when the ``tokens`` argument to remember
  was used.  See https://github.com/Pylons/pyramid/pull/314.

- Backport from master: the AuthTktAuthenticationPolicy did not use a
  timing-attack-aware string comparator.  See
  https://github.com/Pylons/pyramid/pull/320 for more info.

- Backport from master: the DummySession in ``pyramid.testing`` now generates
  a new CSRF token if one doesn't yet exist.

Testing
-------

- Make tox use WebOb 1.1 for Python 2.5-based systems (WebOb 1.2 is 2.6+).

1.2.1 (2011-09-28)
==================

Features
--------

- Lone instance methods can now be treated as view callables (see