@@ -1,6 +1,14 @@
 Next release
 ============
 
+Features
+--------
+
+- Backport from master: a ``mako.directories`` setting is no longer required
+  to use Mako templates.  Rationale: Mako template renderers can be specified
+  using an absolute asset spec.  An entire application can be written with
+  such asset specs, requiring no ordered lookup path.
+
 Bug Fixes
 ---------
 
